[package]
name = "way-two-fa"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "way2fa"
path = "src/main.rs"

[dependencies]
data-encoding = "2.5.0"
hmac = "0.12.1"
sha1 = "0.10.6"
ratatui = "0.28.0"
serde = { version = "1.0.208", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
anyhow = "1.0.89"
